# lolcate-rs

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml
scripts/: fzf-lol
src/: cli.rs  config.rs  main.rs
