[package]
authors = [ "Nicolas Girard <girard.nicolas@gmail.com>" ]
categories = [ "command-line-utilities", "filesystem" ]
description = "A comically fast way of indexing and querying your filesystem. Replaces locate / mlocate / updatedb."
documentation = "https://github.com/ngirard/lolcate-rs/blob/master/README.md"
edition = "2021"
exclude = [
    "/misc/**",
    "/mk_test_tree.sh",
    "notes.txt",
    "/test/**",
]
keywords = [ "filesystem-indexer", "search", "regex" ]
license = "GPL-3.0"
name = "lolcate-rs"
readme = "README.md"
repository = "https://github.com/ngirard/lolcate-rs"
version = "0.1.3"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.79"
atty = "0.2.14"
bstr = "1.9"
cachedir = "0"
clap = { version = "4", features = [ "cargo", "derive" ] }
colored = "2"
crossbeam-channel = "0.5"
expanduser = "1.2"
file_type_enum = "2.0.1"
home = "0.5.9"
ignore = "0.4"
lscolors = { version = "0.17.0", features = [ "ansi_term" ] }
lz4 = "1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
regex = "1"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.8"
walkdir = "2"

[[bin]]
name = "lolcate"
path = "src/main.rs"

[profile.release]
lto = true
