[package]
authors = [ "Dan Sully <dan+github@sully.org>" ]
categories = [ "command-line-utilities", "filesystem" ]
description = "A comically fast way of indexing and querying your filesystem. Replaces locate / mlocate / updatedb."
documentation = "https://github.com/dsully/lolcate-rs/blob/master/README.md"
edition = "2021"
keywords = [ "filesystem-indexer", "search", "regex" ]
license = "GPL-3.0"
name = "lolcate-rs"
readme = "README.md"
repository = "https://github.com/dsully/lolcate-rs"
version = "0.2.0"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.79"
atty = "0.2.14"
bstr = "1.9"
cachedir = "0"
clap = { version = "4", features = [ "cargo", "derive" ] }
colored = "2"
crossbeam-channel = "0.5"
expanduser = "1.2"
file_type_enum = "2.0.1"
home = "0.5.9"
ignore = "0.4"
lscolors = { version = "0.17.0", features = [ "ansi_term" ] }
lz4 = "1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
regex = "1"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.8"
walkdir = "2"

[[bin]]
name = "lolcate"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "dsully/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
