[package]
authors = [ "Dan Sully <dan+github@sully.org>" ]
categories = [ "command-line-utilities", "filesystem" ]
description = "A comically fast way of indexing and querying your filesystem. Replaces locate / mlocate / updatedb."
documentation = "https://github.com/dsully/lolcate-rs/blob/master/README.md"
edition = "2021"
keywords = [ "filesystem-indexer", "search", "regex" ]
license = "GPL-3.0"
name = "lolcate-rs"
readme = "README.md"
repository = "https://github.com/dsully/lolcate-rs"
version = "0.2.0"

[dependencies]
anyhow = "1.0.79"
bstr = "1.9"
cachedir = "0"
clap = { version = "4", features = [ "cargo", "derive" ] }
colored = "2"
crossbeam-channel = "0.5"
figment = { version = "0.10.14", features = [ "toml" ] }
file_type_enum = "2.0.1"
fs2 = "0.4.3"
home-dir = "0.1.0"
humantime = "2.1.0"
ignore = "0.4"
indicatif = "0.17.8"
lz4 = "1"
num-format = "0.4"
num_cpus = "1.16.0"
regex = "1"
serde = { version = "1.0", features = [ "derive" ] }
walkdir = "2"
xdg = "2.5.2"

[[bin]]
name = "lolcate"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = [ "github" ]
# The installers to generate for each app
installers = [ "homebrew" ]
# A GitHub repo to push Homebrew formulas to
tap = "dsully/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [ "aarch64-apple-darwin", "x86_64-unknown-linux-gnu" ]
# Publish jobs to run in CI
publish-jobs = [ "homebrew" ]
# Publish jobs to run in CI
pr-run-mode = "plan"
